[gd_scene load_steps=32 format=3 uid="uid://dkt3s7wbnw3ek"]

[ext_resource type="Script" path="res://scripts/fester.gd" id="1_0ytq8"]
[ext_resource type="Shader" uid="uid://ba4x50f4o2nba" path="res://shaders/blink.tres" id="2_myen5"]
[ext_resource type="Texture2D" uid="uid://coo0yufsxmf4l" path="res://assets/sprites/enemies/fester/fester_attack_sheet.png" id="3_l4ax2"]
[ext_resource type="Texture2D" uid="uid://dy6ylb8up0wjc" path="res://assets/sprites/enemies/fester/fester_idle_sheet.png" id="4_a53yi"]
[ext_resource type="PackedScene" uid="uid://cj5ky0bvhedwe" path="res://scenes/player/hurt_player_area.tscn" id="5_hyjv3"]
[ext_resource type="AudioStream" uid="uid://w7oda2afdl4w" path="res://assets/sound effects/enemies/fester scream.mp3" id="5_s3ruv"]
[ext_resource type="Texture2D" uid="uid://c6d7qb3ig76k7" path="res://assets/sprites/enemies/fester/fester_run_sheet.png" id="5_u76m3"]
[ext_resource type="PackedScene" uid="uid://honmn2s1smfo" path="res://scenes/enemies/enemy_healthbar.tscn" id="8_eh8l7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ji213"]
resource_local_to_scene = true
shader = ExtResource("2_myen5")
shader_parameter/enabled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7fxb"]
atlas = ExtResource("3_l4ax2")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2y54"]
atlas = ExtResource("3_l4ax2")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxkkv"]
atlas = ExtResource("3_l4ax2")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0hkn"]
atlas = ExtResource("3_l4ax2")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5f5ko"]
atlas = ExtResource("3_l4ax2")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtiby"]
atlas = ExtResource("4_a53yi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_652cx"]
atlas = ExtResource("4_a53yi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek45m"]
atlas = ExtResource("4_a53yi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv8j5"]
atlas = ExtResource("4_a53yi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr4e3"]
atlas = ExtResource("5_u76m3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaj2f"]
atlas = ExtResource("5_u76m3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8j5t"]
atlas = ExtResource("5_u76m3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3yxa"]
atlas = ExtResource("5_u76m3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rantg"]
atlas = ExtResource("5_u76m3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_47d34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7fxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2y54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxkkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0hkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5f5ko")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtiby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_652cx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek45m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv8j5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaj2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8j5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3yxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rantg")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ps2ld"]
radius = 8.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5jea4"]
radius = 96.0

[sub_resource type="Animation" id="Animation_37y7c"]
length = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedFesterSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedFesterSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7ssvu"]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedFesterSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedFesterSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8rcyp"]
resource_name = "hurt_blink"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedFesterSprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedFesterSprite:material:shader_parameter/tint")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(0.92549, 0.152941, 0.247059, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31xmi"]
_data = {
"RESET": SubResource("Animation_37y7c"),
"blink": SubResource("Animation_7ssvu"),
"hurt_blink": SubResource("Animation_8rcyp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqk5t"]
size = Vector2(12, 16)

[node name="fester" type="CharacterBody2D" groups=["enemies"]]
z_index = 4
collision_layer = 8
collision_mask = 16
script = ExtResource("1_0ytq8")

[node name="AnimatedFesterSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ji213")
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_47d34")
animation = &"attack"
autoplay = "idle"
frame = 4
frame_progress = 1.0

[node name="FesterCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ps2ld")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(13, 0)
collision_mask = 16

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(-13, 0)
collision_mask = 16

[node name="ChasePlayer" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="DetectionCollider" type="CollisionShape2D" parent="ChasePlayer"]
shape = SubResource("CircleShape2D_5jea4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_31xmi")
}

[node name="HurtPlayerArea" parent="." instance=ExtResource("5_hyjv3")]
damage = 8
knock_back_force = 45

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtPlayerArea"]
position = Vector2(-16, -8)
shape = SubResource("RectangleShape2D_kqk5t")

[node name="RoamTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="FesterScreamAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_s3ruv")
bus = &"SFX"

[node name="enemy_healthbar" parent="." instance=ExtResource("8_eh8l7")]
position = Vector2(0, -16)

[connection signal="animation_finished" from="AnimatedFesterSprite" to="." method="_on_animated_fester_sprite_animation_finished"]
[connection signal="body_entered" from="ChasePlayer" to="." method="_on_chase_player_body_entered"]
[connection signal="body_exited" from="ChasePlayer" to="." method="_on_chase_player_body_exited"]
[connection signal="timeout" from="RoamTimer" to="." method="_on_change_state_timer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
